--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # app
-NEXT_URL='http://localhost:3000'
+NEXT_PUBLIC_URL='http://localhost:3000'
 
 # stripe
-STRIPE_PUBLIC_KEY=''
-STRIPE_SECRET_KEY=''
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=''
+NEXT_PUBLIC_STRIPE_SECRET_KEY=''
